Make LongTerm self-validate.